# spotify-party

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  package-lock.json  spotify-party.code-workspace
spotify-party/: README.md  TODO.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
spotify-party-bcknd/: .env  Dockerfile  package-lock.json  package.json
spotify-party-bcknd/src/: Fetch-Wrapper.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
spotify-party-bcknd/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts  constants.ts
spotify-party-bcknd/src/keys/: jwtRSA256-private.pem  jwtRSA256-public.pem
spotify-party-bcknd/src/login/: login.controller.ts  login.module.ts  login.service.ts
spotify-party-bcknd/src/search/: search.controller.ts  search.service.ts
spotify-party-bcknd/src/songs/: songs.controller.ts  songs.service.ts
spotify-party-bcknd/src/types/: index.d.ts
spotify-party-bcknd/src/votes/: votes.controller.ts  votes.service.ts
spotify-party/src/: Fetch-Wrapper.ts  index.html  main.ts  proxy.conf.json  styles.scss
spotify-party/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  global.service.ts  jwt.service.ts
spotify-party/src/app/login/: login.component.html  login.component.scss  login.component.ts
spotify-party/src/app/playlist/: playlist.component.html  playlist.component.scss  playlist.component.ts
spotify-party/src/app/search/: search.component.html  search.component.ts
spotify-party/src/app/vote/: vote.component.html  vote.component.ts  vote.dialog.html
spotify-party/src/environments/: environment.prod.ts  environment.ts
spotoxide/: .dockerignore  .env.example  Cargo.toml  Dockerfile  TODO.md
spotoxide-ui/: README.md  angular.json  package-lock.json  package.json
spotoxide-ui/src/: index.html  styles.scss  types.ts
spotoxide-ui/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts  socketio.service.ts  songs.service.ts  votes.service.ts
spotoxide-ui/src/app/currentplay/: currentplay.component.html  currentplay.component.spec.ts  currentplay.component.ts
spotoxide-ui/src/app/playlist/: playlist.component.html  playlist.component.scss  playlist.component.ts
spotoxide-ui/src/app/search/: search.component.html  search.component.scss  search.component.ts
spotoxide-ui/src/app/voting/: voting.component.html  voting.component.scss  voting.component.ts
spotoxide-ui/src/environments/: environment.ts
spotoxide/src/: app.rs  auth.rs  db.rs  handler.rs  health.rs  iohandler.rs  main.rs  song.rs  song_queue.rs  user.rs  votes.rs
