[package]
name = "spotoxide"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.9", features = ["macros", "tokio"]}
chrono = {version = "0.4.40", features= ["serde"]}
dotenv = "0.15.0"
random_name_generator = "0.3.6"
reqwest = "0.12.14"
rmpv = {version = "1.3.0", features = ["with-serde"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
socketioxide = {version = "0.15.1", features = ["state", "tracing", "extensions"]}
# spotify-rs = "0.3.14"
spotify-rs = {path = "../../spotify-rs/"}
tokio = {version = "1.44.1", features = ["rt-multi-thread"]}
tower = {version="0.5.2", features= ["limit", "buffer"]}
tower-http = {version = "0.6.2", features = ["cors"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
