[package]
name = "spotoxide"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["macros", "tokio"]}
chrono = {version = "0.4.41", features= ["serde"]}
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
peak_alloc = "0.3.0"
random_name_generator = "0.3.6"
rmpv = {version = "1.3.0", features = ["with-serde"]}
serde = {version = "1.0.219", features = ["derive"]}
socketioxide = {version = "0.17.2", features = ["v4","state", "tracing", "extensions"]}
spotify-rs = "0.4.1"
# spotify-rs = {git  = "https://github.com/JayJayArr/spotify-rs.git"}
# spotify-rs = {path = "../../spotify-rs"}
tokio = {version = "1.46.1", features = ["rt-multi-thread", "signal"]}
tokio-cron-scheduler = {version = "0.14.0", features = ["tracing-subscriber", "english"]}
tokio-util = {version = "0.7.15" , features = ["rt"]}
tower = {version="0.5.2", features= ["limit", "buffer"]}
tower-http = {version = "0.6.6", features = ["cors"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
